--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,3 +17,12 @@
     margin-left: 0;
     margin-right: 0;
 }
+
+.button{
+    text-align: center;
+    position: relative;
+    border: solid 1px black;
+    margin: 0 5px 10px 5px;
+    text-transform: uppercase;
+    color: #fffffe!important;
+}
