--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,3 +26,16 @@
     text-transform: uppercase;
     color: #fffffe!important;
 }
+
+.page-label{
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: large;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.card{
+    border: 1px solid black;
+    margin: 7px;
+}
