--- a/client/src/routes/home/home.css
+++ b/client/src/routes/home/home.css
@@ -1,6 +1,6 @@
 #home-container{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 34px);;
     background-color: #e8e2db;
     color: #fffffe;
 }
