--- a/client/src/routes/table/view/table-view.css
+++ b/client/src/routes/table/view/table-view.css
@@ -1,6 +1,6 @@
 #table-view-container{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 34px);
     background-color: #e8e2db;
     /* color: #fffffe; */
 }
