code refactor -> center icon vertically

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,10 @@
     border: 1px solid black;
     margin: 7px;
 }
+
+.fa-plus{
+    text-align: center;
+    width: 100%;
+    color: black;
+    line-height: inherit;
+}
