changes buttons text colors, added border to footer,

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,7 +24,7 @@
     border: solid 1px black;
     margin: 0 5px 10px 5px;
     text-transform: uppercase;
-    color: #fffffe!important;
+    color: #212529!important;
 }
 
 .page-label{
