--- a/client/src/routes/home/home.css
+++ b/client/src/routes/home/home.css
@@ -1,6 +1,6 @@
 #home-container{
     width: 100%;
-    height: calc(100% - 34px);;
+    height: calc(100% - 44px);;
     background-color: #e8e2db;
     color: #fffffe;
 }
@@ -10,6 +10,10 @@
     background-color:#1A3263;
     border-radius: 2%;
     box-shadow:0px 0px 0px 9px black;
+}
+
+#login-button{
+    color: #fffffe!important;
 }
 
 #login-button:hover{
