--- a/client/src/routes/table/view/table-view.css
+++ b/client/src/routes/table/view/table-view.css
@@ -9,3 +9,10 @@
     text-decoration: underline;
     font-style: italic;
 }
+
+#big-plus{
+    text-align: center;
+    width: 100%;
+    color: black;
+    line-height: inherit;
+}
