implementing back button and code refactor

--- a/client/src/widgets/navigation-bar/navigation-bar.css
+++ b/client/src/widgets/navigation-bar/navigation-bar.css
@@ -1,4 +1,16 @@
 #nav-container{
     border: 5px solid black;
     text-align: center;
+    color: #fffffe!important;
+}
+
+.nav-link{
+    color: #fffffe!important;
+}
+
+#back-arrow{
+    position: absolute;
+    left: 10px;
+    top: 4px;
+    cursor: pointer;
 }
