--- a/client/src/widgets/pop-ups/pop-ups.css
+++ b/client/src/widgets/pop-ups/pop-ups.css
@@ -3,9 +3,12 @@
     width: 300px;
     position: absolute;
     right: 0;
-    margin-right: 5px;
-    margin-top: 2px;
-    border: 2px solid black;
+    margin-right: 10px;
+    z-index: 999;
+    top: 0;
+    margin-top: 10px;
+    box-shadow: 0px 0px 3px 2px black;
+    opacity: 0;
 }
 
 #popup-message{
@@ -22,4 +25,13 @@
     width: 100%;
     text-align: center;
     cursor: pointer;
+}
+
+.fade-in-animation{
+    animation: fade-in 1s forwards;
+}
+
+@keyframes fade-in {
+    from   { transform:translate(0, 50px); opacity:0; }
+    to { transform:translate(0, 0); opacity:1; }
 }
