--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,10 +67,31 @@
     text-align: center;
     width: 100%;
     color: black;
+    cursor: pointer;
     line-height: inherit;
 }
 
 input{
     width: 80%;
     text-align: center;
+    margin: 0 auto;
+    display: block;
+}
+
+.modal-options{
+    width: 100%;
+    height:100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    display: flex;
+    align-items: center;
+}
+
+.modal-options-content{
+    background-color: #fffffe;
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+    padding: 10px;
 }
