--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,6 +84,8 @@ input{
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     align-items: center;
     z-index: 99;
