--- a/client/src/widgets/pop-ups/message-pop-up/pop-ups.css
+++ b/client/src/widgets/pop-ups/message-pop-up/pop-ups.css
@@ -6,6 +6,8 @@
     margin-right: 10px;
     z-index: 999;
     top: 0;
+    left: 0;
+    right: 0;
     margin-top: 10px;
     box-shadow: 0px 0px 3px 2px black;
     opacity: 0;
