add and remove constraint from a new column, refernce data using deep copy, new structure to represent a column object, UI view changes based on user's input

--- a/client/src/routes/table/view/table-view.css
+++ b/client/src/routes/table/view/table-view.css
@@ -9,3 +9,28 @@
     text-decoration: underline;
     font-style: italic;
 }
+
+.column-edit{
+    width: 80%;
+    max-height: 95vh;
+    overflow-y: scroll;
+}
+
+.delete-column-button{
+    margin-top: 4px;
+}
+
+.column-to-edit{
+    border: 2px solid black;
+    margin: 4px auto;
+    padding: 2px 4px;
+}
+
+.constraint-label{
+    position: relative;
+}
+
+.constraint-delete-button{
+    position: absolute;
+    right: 0;
+}
