update logout button

--- a/client/src/widgets/navigation-bar/navigation-bar.css
+++ b/client/src/widgets/navigation-bar/navigation-bar.css
@@ -2,6 +2,12 @@
     border: 5px solid black;
     text-align: center;
     color: #fffffe!important;
+    
+}
+.nav-link:hover {
+    cursor: pointer;
+    background-color: #e8e2db;
+    color: #1A3263!important;
 }
 
 .nav-link{
