--- a/client/src/widgets/pop-ups/message-pop-up/pop-ups.css
+++ b/client/src/widgets/pop-ups/message-pop-up/pop-ups.css
@@ -8,7 +8,7 @@
     top: 0;
     right: 0;
     margin-top: 10px;
-    box-shadow: 0px 0px 3px 2px black;
+    /* box-shadow: 0px 0px 3px 2px black; */
     opacity: 0;
 }
 
@@ -17,11 +17,9 @@
 }
 
 #close-icon{
-    /* padding: 0 5px; */
     background-color: black;
     color: #fffffe;
     position: absolute;
-    bottom: 0;
     margin-bottom: 0;
     width: 100%;
     text-align: center;
